Acesso ao banco de forma dinameica ultilizando o for

--- a/atendimento/templates/home.html
+++ b/atendimento/templates/home.html
@@ -19,7 +19,7 @@
         <div class="card-body">
           <h5 class="card-title">Clientes</h5>
           <p class="card-text">Gerencie o cadastro dos clientes da sua clínica.</p>
-          <a href="http://127.0.0.1:8000/atendimento/paciente/" class="btn btn-primary">Cliente</a>
+          <a href="http://127.0.0.1:8000/atendimento/paciente/" class="btn btn-primary">Paciente</a>
         </div>
       </div>
     </div>
