--- a/atendimento/templates/paciente/list.html
+++ b/atendimento/templates/paciente/list.html
@@ -1,6 +1,26 @@
 {% extends 'base.html' %}
 {% block conteudo %}
-<h1>Nome: Jackson Jefferson de Sousa</h1>
-<h2>Data de Nasc: 08/01/1996</h2>
-<h3>Sexo: Masculino</h3>
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Dt Nasc</th>
+            <th>CPF</th>
+            <th>Sexo</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for paciente in pacientes %}
+            <tr>
+                <td>{{paciente.id}}</td>
+                <td>{{paciente.nome}}</td>
+                <td>{{paciente.dt_nasc}}</td>
+                <td>{{paciente.cpf}}</td>
+                <td>{{paciente.sexo}}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+<p>Foram cadastrados {{pacientes | length }} pacientes</p>
 {% endblock %}
