--- a/atendimento/templates/base.html
+++ b/atendimento/templates/base.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="http://127.0.0.1:8000/atendimento/medico/1942">Consulta</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://127.0.0.1:8000/atendimento/medicamento">Medicamento</a>
+                </li>
             </ul>
         </div>
     </nav>
