Implementação do show pacinete e show medico

--- a/atendimento/templates/base.html
+++ b/atendimento/templates/base.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="http://127.0.0.1:8000/atendimento/agendamento/">Agendamento</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/atendimento/medico/1942">Consulta</a>
+                    <a class="nav-link" href="##">Consulta</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="http://127.0.0.1:8000/atendimento/medicamento">Medicamento</a>
