--- a/atendimento/templates/home.html
+++ b/atendimento/templates/home.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-
 {% block conteudo %}
-
+{% load static %}
   <div class="row">
     <div class="col-lg-12">
       <div class="jumbotron">
@@ -54,6 +53,6 @@
       </div>
     </div>
   </div>
-
+  <img src="{% static 'imagens/logo.jpg' %}" alt="">
 
 {% endblock %}
